# proofagent-0g

./: .env.example  .gitignore  Cargo.toml  LEDGER.md  README.md  VERIFY.md  proofagent.toml
.github/workflows/: ci.yml  pages.yml
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: bridge.test.ts  bridge.ts  connector.ts  execute.test.ts  execute.ts  gasfloor.test.ts  gasfloor.ts  gateway.test.ts  gateway.ts  hostedBrain.test.ts  hostedBrain.ts  loop.test.ts  loop.ts  mandate.test.ts  mandate.ts  plan.test.ts  plan.ts  route.test.ts  route.ts  swap.test.ts  swap.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployAgentIdentity.s.sol  DeployAgentIdentityINFT.s.sol  DeploySettlementOracle.s.sol  DeployTimelock.s.sol  DeployV3.s.sol  DeployV4.s.sol
contracts/src/: AgentIdentity.sol  AgentIdentityINFT.sol  MandateRegistry.sol  MandateRegistryV3.sol  MandateRegistryV4.sol  SettlementOracle.sol  TimelockGuard.sol
contracts/test/: AgentIdentity.t.sol  AgentIdentityINFT.t.sol  Deploy.t.sol  (+11 more)
demo/: EVIDENCE.md  EVIDENCE_BRIDGE.md  EVIDENCE_ENGINE.md  EVIDENCE_FULLSTACK_0G.md  EVIDENCE_MANDATE_V3.md  EVIDENCE_ROUTE.md  EVIDENCE_SWAP.md  live_loop.sh  mandate_v3_period_cap.sh  proofagent.demo.journal
docs/: ADD_AN_ADAPTER.md  AIVERSE_LISTING.md  PROOFAGENT_0G_DESIGN.md  PROOFAGENT_0G_EVIDENCE.md  PROOFAGENT_0G_INTENTS_ROADMAP.md
scripts/: 0g_only_gate.ps1
verifier/: Cargo.toml
verifier/src/: adjudicate.rs  breakit.rs  bridge.rs  config.rs  connector.rs  filler.rs  fillproof.rs  gasfloor.rs  journal.rs  ledger.rs  lib.rs  main.rs  mandate.rs  networth.rs  reconciler.rs  route.rs  slasher.rs  source.rs  swap.rs  timelock.rs  verdict.rs  verify.rs  xchain.rs
verifier/tests/: bridge_verdict.rs  connector_unify.rs  ledger_audit.rs  mandate_tiers.rs  mandate_v4_hardened.rs  route_verdict.rs  spoke_isolation.rs  swap_verdict.rs  verify_tx.rs
web/: README.md  dashboard.html  index.html  package-lock.json  package.json  style.css  tsconfig.json  tsconfig.test.json
(+52 files in other folders)
